Fixing some legacy alignment bugs in the class system

--- a/grid-classes.scss
+++ b/grid-classes.scss
@@ -244,7 +244,7 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 	//allows wrapping at all screen widths
 	&--wrap {
 		flex-wrap: wrap;
-		@include ieFloat;
+		// @include ieFloat;
 	}
 	//disables wrapping at all screen widths
 	&--noWrap {
@@ -320,7 +320,7 @@ $fullPrefix: if($grid-prefix != '', $grid-prefix+'-', '');
 			width: auto;
 			> * { display: table-cell; vertical-align: top; }
 
-			&--wrap:not([class*="grid--vAlign"]), &[class*="grid--cols"][class*="grid--gutter"] {
+			&--wrap:not([class*="grid--vAlign"]):not([class*="grid--space-"]) {
 				display: block;
 				> * {
 					display: block;
